--- a/apps/AdminComposite/Views/Authentication/ForgotPassword.cshtml
+++ b/apps/AdminComposite/Views/Authentication/ForgotPassword.cshtml
@@ -2,7 +2,7 @@
 
 @{
 	ViewBag.Title = "Forgot Password";
-	Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
+	Layout = "_AnonymousLayout.cshtml";
 }
 
 @section bodyClass {
@@ -44,6 +44,6 @@
 <!-- /Login box -->
 
 <ul class="login-links">
-	<li><a href="@Url.Action("Signin", "User")">Signin</a></li>
-	<li><a href="@Url.Action("Create", "User")">Signup</a></li>
+	<li><a href="@Url.Action("Signin", "Authentication")">Signin</a></li>
+	<li><a href="@Url.Action("Create", "Authentication")">Signup</a></li>
 </ul>
