--- a/apps/ForumComposite/Views/Post/Thread.cshtml
+++ b/apps/ForumComposite/Views/Post/Thread.cshtml
@@ -26,7 +26,7 @@
 				<div class="Comment">
 
 					<div class="Meta">
-						<span class="Author"><a title="smhinsey" href="#user">
+						<span class="Author"><a title="smhinsey" href="../../../AdminComposite/Views/UserProfile#user">
 																 	<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=140&d=https://gs1.wac.edgecastcdn.net/80460E/assets%2Fimages%2Fgravatars%2Fgravatar-140.png"
 																			 alt="smhinsey" />
 																 </a>
