--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -4,6 +4,8 @@
 		   
 <script type="text/javascript">
 	$(document).ready(function () {
+		$("#forum-name").focus();
+
 		$("sumbit-create-command").click(function () {
 			alert($("#forum-description").val());
 			return false;
@@ -11,11 +13,6 @@
 	});
 </script>
 
-@{
-	// note: remove this when organizations get wired up
-	Model.OrganizationId = Guid.NewGuid();
-	Model.Description = " ";
-}
 <article>
 	<header>
 		<h2>Add Forum</h2>
@@ -47,7 +44,27 @@
 		<fieldset>
 			<legend>Settings</legend>
 
-			@{Html.RenderPartial("_ForumDetails", Model);}
+			<dl>
+				<dt><label for="forum-name">Name</label></dt>
+				<dd>@Html.TextBoxFor(m => m.Name, new { id = "forum-name" })</dd>
+
+				<dt><label for="forum-slug">Slug</label></dt>
+				<dd>
+					@Html.TextBoxFor(m=>m.UrlSlug, new {id="forum-slug"})
+					<p><a href="#" id="generate-slug">generate slug</a></p>
+				</dd>
+
+				<dt><label for="forum-host">Host</label></dt>
+				<dd>
+					@Html.TextBoxFor(m => m.UrlHostName, new { id = "forum-host", @readonly = "readonly" })
+					<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
+				</dd>
+
+				<dt><label>Description</label></dt>
+				<dd>
+					@Html.TextAreaFor(m => m.Description, new { id = "forum-description", @class = "wysiwyg", @readonly = "readonly" })
+				</dd>
+			</dl>
 	 	</fieldset>
 
 		<input type="submit" class="button" value="Create Forum" id="sumbit-create-command"/>
