--- a/apps/AdminComposite/Views/Organization/Details.cshtml
+++ b/apps/AdminComposite/Views/Organization/Details.cshtml
@@ -19,7 +19,7 @@
 		});
 
 		$(".edit.user").click(function () {
-			var organizationId = "11111111-1111-1111-1111-111111111111";
+			var organizationId = "@ViewBag.OrganizationId";
 			$("<div></div>")
 				.load("/Organization/GetUser?organizationId=" + organizationId + "&userId=" + $(this).attr("data-user-id"))
 				.modal({
@@ -150,11 +150,11 @@
 		<button type="button" id="save-edit" style="display:none">Save</button>
 	</form>
 
-	@using (Html.BeginFormForInputModel(Model, false, string.Empty, "update-form"))
+	@using (Html.BeginFormForInputModel(Model, true, Url.Action("Details", "Organization", new {organizationId = Model.OrganizationIdentifier}), "update-form"))
 	{
 		@Html.HiddenFor(m => m.OrganizationIdentifier)
 		@Html.HiddenFor(m=>m.Address, new { id="update-organization-address" })
-		@Html.HiddenFor(m => m.Address2, new { id = "update-organization-address2" })
+		@Html.HiddenFor(m => m.Address2, new { id = "update-organization-address-2" })
 		@Html.HiddenFor(m => m.City, new { id = "update-organization-city" })
 		@Html.HiddenFor(m => m.Country, new { id = "update-organization-country" })
 		@Html.HiddenFor(m => m.OrganizationName, new { id = "update-organization-name" })
