--- a/apps/AdminComposite/Views/Organization/_UpdateOrganizationUser.cshtml
+++ b/apps/AdminComposite/Views/Organization/_UpdateOrganizationUser.cshtml
@@ -2,7 +2,7 @@
 @using Euclid.Composites.Mvc.Extensions
 @model UpdateOrganizationUserInputModel
 
-@using (Html.BeginFormForInputModel(Model))
+@using (Html.BeginFormForInputModel(Model, true, Url.Action("Users", "Organization", new {organizationId = Model.OrganizationId})))
 {
 	@Html.HiddenFor(m=>m.OrganizationId)
 	@Html.HiddenFor(m => m.UserId);
