--- a/apps/ForumComposite/Views/Post/List.cshtml
+++ b/apps/ForumComposite/Views/Post/List.cshtml
@@ -22,7 +22,7 @@
 					<div class="Meta">
 						<span class="Announcement">Pinned</span> 
 						<span class="CommentCount">1 comment</span> 
-						<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
+						<span class="LastCommentBy">Started by <a href="../../../AdminComposite/Views/UserProfile#user">smhinsey</a></span>
 						<span class="LastCommentDate">July 14</span>
 						<span>@Html.ActionLink("Nested Category", "Thread", "Post", new { category = "nested-category" }, new { @class = "Category" })</span>
 					</div>
