--- a/apps/AdminComposite/Views/VotingScheme/List.cshtml
+++ b/apps/AdminComposite/Views/VotingScheme/List.cshtml
@@ -1,32 +1,63 @@
-﻿
+﻿@using AdminComposite.Models
+@using Euclid.Composites.Mvc.Extensions
+@model SetVotingSchemeInputModel
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$(".voting-scheme").click(function () {
+			var selectedIsChecked = $(this).is(":checked");
+			var selectedId = $(this).attr("id");
+
+			$(".voting-scheme").each(function (index, item) {
+				var currentId = $(this).attr("id");
+				if (selectedId != currentId && selectedIsChecked) {
+					$(item).prop("checked", false);
+				}
+			});
+
+			if (!$(".voting-scheme").is(":checked")) {
+				$("#forum-voting-disabled").prop("checked", true);
+			}
+		});
+	});
+</script>
+
 <article>
 	<section>
 		<header>
 			<h2>Manage Voting Schemes</h2>
 		</header>
 		<p>Select how forum members vote on posts and comments</p>
-		<table>
-			<thead>
-				<tr>
-					<th>Active</th>
-					<th>Name</th>
-					<th>Description</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><input type="radio" name="voting" value="none"/></td>
-					<td>None</td>
-					<td>Users cannot vote on posts or comments</td>
-				</tr>
-				<tr>
-					<td><input type="radio" name="voting" value="up-down" checked="checked"/></td>
-					<td>Up / Down</td>
-					<td>Users can vote a post or comment up or down.  A user can change their vote, but can only vote on a particular post or comment once</td>
-				</tr>
-			</tbody>
-		</table>
-		<button type="submit" id="save-voting-scheme">Save</button>
+		@using (Html.BeginFormForInputModel(Model))
+		{
+			@Html.HiddenFor(m=>m.ForumIdentifier)
+			<table>
+				<thead>
+					<tr>
+						<th>Active</th>
+						<th>Name</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							@Html.CheckBoxFor(m => m.NoVoting, new { @class = "voting-scheme", id = "forum-voting-disabled" })
+						</td>
+						<td>None</td>
+						<td>Users cannot vote on posts or comments</td>
+					</tr>
+					<tr>
+						<td>
+							@Html.CheckBoxFor(m => m.UpDownVoting, new { @class= "voting-scheme", id = "forum-voting-updown" })
+						</td>
+						<td>Up / Down</td>
+						<td>Users can vote a post or comment up or down.  A user can change their vote, but can only vote on a particular post or comment once</td>
+					</tr>
+				</tbody>
+			</table>
+			<button type="submit" id="save-voting-scheme">Save</button>
+		}
 	</section>
 </article>
 
