--- a/apps/AdminComposite/Views/Moderation/Moderation.cshtml
+++ b/apps/AdminComposite/Views/Moderation/Moderation.cshtml
@@ -157,7 +157,7 @@
 							<br/>
 							<a href="#" class="reject" data-post-id="@postId"><img src="@Url.Content("~/Content/thumb-down.png")" alt="reject" rel="tooltip" original-title="Reject this @ViewBag.ModerationType"/></a>
 							<br/>
-							<a href="#" class="block-user" data-post-id="@postId" data-confirmation-message="Really Block Author?" data-confirm-function="blockUser" data-item-id="@authorId"><img src="@Url.Content("~/Content/chromatron/img/icons/icon_table_delete.png")" alt="block author" rel="tooltip" original-title="Block this author"/></a>
+							<a href="#" class="block-user confirmation-dialog" data-post-id="@postId" data-confirmation-message="Really Block Author?" data-confirm-function="blockUser" data-item-id="@authorId"><img src="@Url.Content("~/Content/chromatron/img/icons/icon_table_delete.png")" alt="block author" rel="tooltip" original-title="Block this author"/></a>
 							<br/>
 							<p style="margin-top: 25px" class="note last-action" data-post-id="@postId"></p>
 						</div>
