--- a/apps/AdminComposite/Views/Category/_UpdateCategory.cshtml
+++ b/apps/AdminComposite/Views/Category/_UpdateCategory.cshtml
@@ -1,12 +1,11 @@
 ﻿@using AdminComposite.Models
 @using Euclid.Composites.Mvc.Extensions
-@model CreateCategoryInputModel
+@model UpdateCategoryInputModel
 
 <section>
 	@using (Html.BeginFormForInputModel(Model))
 	{
-		@Html.HiddenFor(m => m.ForumIdentifier);
-		@Html.HiddenFor(m => m.CreatedBy);
+		@Html.HiddenFor(m => m.Identifier);
 		<fieldset>
 			<legend>New Category</legend>
 		
