--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -109,31 +109,9 @@
 						</dl>
 						
 						@{
-							var forumUrl = string.Format("http//{0}/{1}/forums/{2}", Model.UrlHostName, @ViewBag.OrganizationName, @Model.Name);
+							var forumUrl = string.Format("http//{0}/{1}/forums/{2}", Model.UrlHostName, @ViewBag.OrganizationSlug, @Model.UrlSlug);
 						}
 						<p class="notification information"><a href="@forumUrl" title="forum-url">@forumUrl</a></p>
-
-					</fieldset>
-				
-					<fieldset>
-						<legend>Other Settings to Copy</legend>
-
-						<dl>
-							<dt><label for="copy-badges">Badges</label></dt>
-							<dd><input type="checkbox" id="copy-badges" readonly="readonly" disabled="disabled"/></dd>
-
-							<dt><label for="copy-categories">Categories</label> </dt>
-							<dd><input type="checkbox" id="copy-categories" readonly="readonly" disabled="disabled"/> </dd>
-
-							<dt><label for="copy-voting">Voting</label></dt>
-							<dd><input type="checkbox" id="copy-voting" readonly="readonly" disabled="disabled"/></dd>
-
-							<dt><label for="copy-content">Content</label></dt>
-							<dd><input type="checkbox" id="copy-content" readonly="readonly" disabled="disabled"/></dd>
-
-							<dt><label for="copy-theme">Theme Selection</label></dt>
-							<dd><input type="checkbox" id="copy-theme" readonly="readonly" disabled="disabled"/></dd>
-						</dl>
 					</fieldset>
 				</form>
 			</div>
