--- a/apps/AdminComposite/Views/Content/_wysiwg.cshtml
+++ b/apps/AdminComposite/Views/Content/_wysiwg.cshtml
@@ -1,8 +1,10 @@
-﻿@model object
+﻿@model string
 
 <script>
 	$(document).ready(function() {
 		$(".wysiwyg").wysiwyg();
 	})
 </script>
-<textarea id="content-input" class="wysiwyg" rows="15" cols="45"> </textarea>
+<textarea id="content-input" class="wysiwyg" rows="15" cols="45">
+	@if (string.IsNullOrEmpty(@Model)) { <text> </text> }else { <text>@Model</text>}
+</textarea>
