--- a/apps/AdminComposite/Views/UserProfile/_Invite.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/_Invite.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginFormForInputModel(Model, true, Url.Action("List", "UserProfile", new { forumId = Model.ForumIdentifier })))
 {
+	@Html.HiddenFor(m => m.ForumIdentifier);
 	@Html.HiddenFor(m=>m.Password)
 	<fieldset>
 		<legend>User</legend>
