--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -55,7 +55,7 @@
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "category", "list", "current")>
 						<a href="@Url.Action("List", "Category", new { forumId })">Categories</a> </li>
 				
-					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "user", "list", "current")>
+					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "userprofile", "list", "current")>
 					<a href="@Url.Action("List", "UserProfile", new { forumId })">Users</a> </li>
 				
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "badge", "list", "current")>
