--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -78,44 +78,41 @@
 	
 	<p>Manage content for this forum</p>
 
-	<section>
-		<table>
-			<thead>
+	<table>
+		<thead>
+			<tr>
+				<th>Active</th>
+				<th>Location</th>
+				<th>Type</th>
+				<th>&nbsp;</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var content in Model)
+			{
 				<tr>
-					<th>Active</th>
-					<th>Location</th>
-					<th>Type</th>
-					<th>&nbsp;</th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var content in Model)
-				{
-					<tr>
-						<td>@Html.CheckBoxFor(m=>content.Active, new {@class="content-active", data_item_id=@content.Identifier})</td>
-						<td>@content.ContentLocation</td>
-						<td>@content.ContentType</td>
-						<td>
-							<ul class="actions">
-								<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-item-id="@content.Identifier">Edit</a></li>
-								<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-confirm-function="deleteContent" data-item-id="@content.Identifier">Delete</a></li>
-								<li><a class="preview" data-item-id="@content.Identifier" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
-							</ul>
-						</td>
-					</tr>
-				}
-				<tr>
-					<td colspan="4">
-						<ul class="button-switch">
-							<li><button type="submit" id="add-content">Add Content</button></li>
-							<li><button type="button" id="update">Save</button></li>
+					<td>@Html.CheckBoxFor(m=>content.Active, new {@class="content-active", data_item_id=@content.Identifier})</td>
+					<td>@content.ContentLocation</td>
+					<td>@content.ContentType</td>
+					<td>
+						<ul class="actions">
+							<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-item-id="@content.Identifier">Edit</a></li>
+							<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-confirm-function="deleteContent" data-item-id="@content.Identifier">Delete</a></li>
+							<li><a class="preview" data-item-id="@content.Identifier" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
 						</ul>
-					
 					</td>
 				</tr>
-			</tbody>
-		</table>
-	</section>
+			}
+			<tr>
+				<td colspan="4">
+					<ul class="button-switch">
+						<li><button type="button" id="add-content">Add Content</button></li>
+						<li><button type="button" id="update">Save</button></li>
+					</ul>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </article>
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
